# pipis

./: .bandit  .dockerignore  .editorconfig  .flake8  .gitlab-ci.yml  .pylintrc  .travis.yml  CHANGELOG  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  makefile  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
pipis/: __init__.py  cli.py  lib.py
src/pipis/: __init__.py  __main__.py  utils.py
tests/: helpers.py  test_00_functions.py  test_01_cli.py  test_02_list.py  test_03_version.py  test_04_install.py  test_05_update.py  test_06_uninstall.py  test_cli.py  test_freeze.py  test_functions.py  test_install.py  test_list.py  test_pipis.py  test_search.py  test_uninstall.py  test_update.py  test_utils.py  test_version.py
