[tool.poetry]
name = "pipis"
version = "1.0.0"
description = "Somewhere between pip and pipsi"
license = "WTFPL"
authors = ["Nicolas KAROLAK <nicolas@karolak.fr>"]
readme = "README.md"
repository = "https://gitlab.com/NicolasKAROLAK/pipis"
homepage = "https://github.com/NicolasKAROLAK/pipis"
keywords = ["packaging", "pip", "venv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution"
]

[tool.poetry.dependencies]
python = "^3.4"
click = "^6.7"

[tool.poetry.dev-dependencies]
pylint = "^1.9"
autopep8 = "^1.3"

[tool.poetry.scripts]
pipis = "pipis:cli"
