[tool.poetry]
name = "pipis"
version = "1.4.0"
description = "Wraps pip and venv to install scripts"
license = "WTFPL"
authors = ["Nicolas KAROLAK <nicolas@karolak.fr>"]
readme = "README.md"
repository = "https://gitlab.com/NicolasKAROLAK/pipis"
homepage = "https://gitlab.com/NicolasKAROLAK/pipis"
keywords = ["packaging", "pip", "venv"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution"
]

[tool.poetry.dependencies]
python = "^3.4"
click = "^6.7"
tabulate = "^0.8"

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.0"
pylint = "^1.9"
pytest = "^3.5"
pytest-cov = "^2.5"

[tool.poetry.scripts]
pipis = "pipis:cli"
