[metadata]
name = pipis
version = 2.0.0
description = Wraps pip and venv to install scripts
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/nikaro/pipis
download_url = https://github.com/nikaro/pipis/releases
author = Nicolas KAROLAK
author_email = nicolas@karolak.fr
keywords = packaging, pip, venv
license = WTFPL
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution

[options]
package_dir=
    =src
packages = find:
scripts = bin/pipis
setup_requires=
    setuptools
    wheel

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
dev =
    bandit
    black
    flake8
    ipython
    pre-commit
    pytest
    pytest-cov
    tox
    twine

[bdist_wheel]
universal = 1
